feat: standardize API responses with consistent structure for success and error

--- a/src/main/resources/messages_fa.properties
+++ b/src/main/resources/messages_fa.properties
@@ -1,51 +1,51 @@
-﻿# ÙÙØ´âÙØ§
-ROLE_NOT_FOUND=ÙÙØ´ {0} ÛØ§ÙØª ÙØ´Ø¯.
-USER_ALREADY_HAS_ROLE=Ú©Ø§Ø±Ø¨Ø± ÙØ¨ÙØ§Ù ÙÙØ´ {0} Ø±Ø§ Ø¯Ø§Ø±Ø¯.
-PERSON_EXISTS=Ø´Ø®Øµ Ø¨Ø§ {0} ÙØ¨ÙØ§Ù Ø¯Ø± Ø³ÛØ³ØªÙ Ø«Ø¨Øª Ø´Ø¯Ù Ø§Ø³Øª.
+﻿# ÃÂÃÂÃÂ´Ã¢ÂÂÃÂÃÂ§
+ROLE_NOT_FOUND=ÃÂÃÂÃÂ´ {0} ÃÂÃÂ§ÃÂÃÂª ÃÂÃÂ´ÃÂ¯.
+USER_ALREADY_HAS_ROLE=ÃÂ©ÃÂ§ÃÂ±ÃÂ¨ÃÂ± ÃÂÃÂ¨ÃÂÃÂ§ÃÂ ÃÂÃÂÃÂ´ {0} ÃÂ±ÃÂ§ ÃÂ¯ÃÂ§ÃÂ±ÃÂ¯.
+PERSON_EXISTS=ÃÂ´ÃÂ®ÃÂµ ÃÂ¨ÃÂ§ {0} ÃÂÃÂ¨ÃÂÃÂ§ÃÂ ÃÂ¯ÃÂ± ÃÂ³ÃÂÃÂ³ÃÂªÃÂ ÃÂ«ÃÂ¨ÃÂª ÃÂ´ÃÂ¯ÃÂ ÃÂ§ÃÂ³ÃÂª.
 
-# Ø±Ø´ØªÙ ØªØ­ØµÛÙÛ Ù Ø¯ÙØ±ÙâÙØ§
-MAJOR_NOT_FOUND=Ø±Ø´ØªÙ {0} ÛØ§ÙØª ÙØ´Ø¯.
-MAJOR_INACTIVE=Ø±Ø´ØªÙ {0} ØºÛØ±ÙØ¹Ø§Ù Ø§Ø³Øª.
-DUPLICATE_MAJOR_NAME=Ø±Ø´ØªÙ Ø¨Ø§ ÙØ§Ù {0} ÙØ¨ÙØ§Ù Ø«Ø¨Øª Ø´Ø¯Ù Ø§Ø³Øª.
-COURSE_ALREADY_EXISTS=Ø¯Ø±Ø³ {0} ÙØ¨ÙØ§Ù Ø«Ø¨Øª Ø´Ø¯Ù Ø§Ø³Øª.
-COURSE_NOT_ACTIVE=Ø¯Ø±Ø³ {0} ØºÛØ±ÙØ¹Ø§Ù Ø§Ø³Øª.
-COURSE_NOT_EXIST_IN_COURSE=Ø¯Ø±Ø³ {0} Ø¯Ø± Ø¯ÙØ±Ù Ø§ÙØªØ®Ø§Ø¨Û ÙÙØ¬ÙØ¯ ÙÛØ³Øª.
-YOU_CAN_CHOOSE_COURSE=ÙÛâØªÙØ§ÙÛØ¯ Ø¯Ø±ÙØ³ Ø±Ø§ Ø§ÙØªØ®Ø§Ø¨ Ú©ÙÛØ¯.
-THE_CAPACITY_IS_FULL=Ø¸Ø±ÙÛØª {0} ØªÚ©ÙÛÙ Ø´Ø¯Ù Ø§Ø³Øª.
+# ÃÂ±ÃÂ´ÃÂªÃÂ ÃÂªÃÂ­ÃÂµÃÂÃÂÃÂ ÃÂ ÃÂ¯ÃÂÃÂ±ÃÂÃ¢ÂÂÃÂÃÂ§
+MAJOR_NOT_FOUND=ÃÂ±ÃÂ´ÃÂªÃÂ {0} ÃÂÃÂ§ÃÂÃÂª ÃÂÃÂ´ÃÂ¯.
+MAJOR_INACTIVE=ÃÂ±ÃÂ´ÃÂªÃÂ {0} ÃÂºÃÂÃÂ±ÃÂÃÂ¹ÃÂ§ÃÂ ÃÂ§ÃÂ³ÃÂª.
+DUPLICATE_MAJOR_NAME=ÃÂ±ÃÂ´ÃÂªÃÂ ÃÂ¨ÃÂ§ ÃÂÃÂ§ÃÂ {0} ÃÂÃÂ¨ÃÂÃÂ§ÃÂ ÃÂ«ÃÂ¨ÃÂª ÃÂ´ÃÂ¯ÃÂ ÃÂ§ÃÂ³ÃÂª.
+COURSE_ALREADY_EXISTS=ÃÂ¯ÃÂ±ÃÂ³ {0} ÃÂÃÂ¨ÃÂÃÂ§ÃÂ ÃÂ«ÃÂ¨ÃÂª ÃÂ´ÃÂ¯ÃÂ ÃÂ§ÃÂ³ÃÂª.
+COURSE_NOT_ACTIVE=ÃÂ¯ÃÂ±ÃÂ³ {0} ÃÂºÃÂÃÂ±ÃÂÃÂ¹ÃÂ§ÃÂ ÃÂ§ÃÂ³ÃÂª.
+COURSE_NOT_EXIST_IN_COURSE=ÃÂ¯ÃÂ±ÃÂ³ {0} ÃÂ¯ÃÂ± ÃÂ¯ÃÂÃÂ±ÃÂ ÃÂ§ÃÂÃÂªÃÂ®ÃÂ§ÃÂ¨ÃÂ ÃÂÃÂÃÂ¬ÃÂÃÂ¯ ÃÂÃÂÃÂ³ÃÂª.
+YOU_CAN_CHOOSE_COURSE=ÃÂÃÂÃ¢ÂÂÃÂªÃÂÃÂ§ÃÂÃÂÃÂ¯ ÃÂ¯ÃÂ±ÃÂÃÂ³ ÃÂ±ÃÂ§ ÃÂ§ÃÂÃÂªÃÂ®ÃÂ§ÃÂ¨ ÃÂ©ÃÂÃÂÃÂ¯.
+THE_CAPACITY_IS_FULL=ÃÂ¸ÃÂ±ÃÂÃÂÃÂª {0} ÃÂªÃÂ©ÃÂÃÂÃÂ ÃÂ´ÃÂ¯ÃÂ ÃÂ§ÃÂ³ÃÂª.
 
-# Ø­Ø³Ø§Ø¨ Ú©Ø§Ø±Ø¨Ø±Û
-USERNAME_NOT_FOUND=ÙØ§Ù Ú©Ø§Ø±Ø¨Ø±Û {0} ÛØ§ÙØª ÙØ´Ø¯.
-ACCOUNT_NOT_ACTIVE=Ø§Ú©Ø§ÙØª {0} ÙØ¹Ø§Ù ÙÛØ³Øª.
-ACCOUNT_NOT_FOUND=Ø§Ú©Ø§ÙØª {0} ÛØ§ÙØª ÙØ´Ø¯.
-PERSON_NOT_FOUND=Ø´Ø®Øµ {0} ÛØ§ÙØª ÙØ´Ø¯.
-PASSWORD_NOT_MATCH=Ø±ÙØ² Ø¹Ø¨ÙØ± ÙØ§Ø±Ø¯ Ø´Ø¯Ù Ø¨Ø§ Ø±ÙØ² ÙÙØ¬ÙØ¯ ÙØ·Ø§Ø¨ÙØª ÙØ¯Ø§Ø±Ø¯.
+# ÃÂ­ÃÂ³ÃÂ§ÃÂ¨ ÃÂ©ÃÂ§ÃÂ±ÃÂ¨ÃÂ±ÃÂ
+USERNAME_NOT_FOUND=ÃÂÃÂ§ÃÂ ÃÂ©ÃÂ§ÃÂ±ÃÂ¨ÃÂ±ÃÂ {0} ÃÂÃÂ§ÃÂÃÂª ÃÂÃÂ´ÃÂ¯.
+ACCOUNT_NOT_ACTIVE=ÃÂ§ÃÂ©ÃÂ§ÃÂÃÂª {0} ÃÂÃÂ¹ÃÂ§ÃÂ ÃÂÃÂÃÂ³ÃÂª.
+ACCOUNT_NOT_FOUND=ÃÂ§ÃÂ©ÃÂ§ÃÂÃÂª {0} ÃÂÃÂ§ÃÂÃÂª ÃÂÃÂ´ÃÂ¯.
+PERSON_NOT_FOUND=ÃÂ´ÃÂ®ÃÂµ {0} ÃÂÃÂ§ÃÂÃÂª ÃÂÃÂ´ÃÂ¯.
+PASSWORD_NOT_MATCH=ÃÂ±ÃÂÃÂ² ÃÂ¹ÃÂ¨ÃÂÃÂ± ÃÂÃÂ§ÃÂ±ÃÂ¯ ÃÂ´ÃÂ¯ÃÂ ÃÂ¨ÃÂ§ ÃÂ±ÃÂÃÂ² ÃÂÃÂÃÂ¬ÃÂÃÂ¯ ÃÂÃÂ·ÃÂ§ÃÂ¨ÃÂÃÂª ÃÂÃÂ¯ÃÂ§ÃÂ±ÃÂ¯.
 
-# Ø²ÙØ§Ù Ù ØªØ±Ù
-TIME_SELECT_UNIT_NOT_STARTED=Ø²ÙØ§Ù Ø§ÙØªØ®Ø§Ø¨ ÙØ§Ø­Ø¯ Ø¨Ø±Ø§Û {0} Ø¢ØºØ§Ø² ÙØ´Ø¯Ù Ø§Ø³Øª.
-TERM_EXCEPTION=Ø®Ø·Ø§ Ø¯Ø± ØªØ±Ù {0} Ø±Ø® Ø¯Ø§Ø¯.
-START_TIME_INVALID=Ø²ÙØ§Ù Ø´Ø±ÙØ¹ {0} ÙØ§ÙØ¹ØªØ¨Ø± Ø§Ø³Øª.
-END_TIME_INVALID=Ø²ÙØ§Ù Ù¾Ø§ÛØ§Ù {0} ÙØ§ÙØ¹ØªØ¨Ø± Ø§Ø³Øª.
-TIME_MISSING=Ø²ÙØ§Ù {0} ÙØ§ÙØµ Ø§Ø³Øª.
-TERM_SUCCESSFULLY_ADD_TO_TERM=ØªØ±Ù {0} Ø¨Ø§ ÙÙÙÙÛØª Ø¨Ù Ø¯ÙØ±Ù Ø§Ø¶Ø§ÙÙ Ø´Ø¯.
+# ÃÂ²ÃÂÃÂ§ÃÂ ÃÂ ÃÂªÃÂ±ÃÂ
+TIME_SELECT_UNIT_NOT_STARTED=ÃÂ²ÃÂÃÂ§ÃÂ ÃÂ§ÃÂÃÂªÃÂ®ÃÂ§ÃÂ¨ ÃÂÃÂ§ÃÂ­ÃÂ¯ ÃÂ¨ÃÂ±ÃÂ§ÃÂ {0} ÃÂ¢ÃÂºÃÂ§ÃÂ² ÃÂÃÂ´ÃÂ¯ÃÂ ÃÂ§ÃÂ³ÃÂª.
+    TERM_EXCEPTION=ÃÂ®ÃÂ·ÃÂ§ ÃÂ¯ÃÂ± ÃÂªÃÂ±ÃÂ {0} ÃÂ±ÃÂ® ÃÂ¯ÃÂ§ÃÂ¯.
+    START_TIME_INVALID=ÃÂ²ÃÂÃÂ§ÃÂ ÃÂ´ÃÂ±ÃÂÃÂ¹ {0} ÃÂÃÂ§ÃÂÃÂ¹ÃÂªÃÂ¨ÃÂ± ÃÂ§ÃÂ³ÃÂª.
+    END_TIME_INVALID=ÃÂ²ÃÂÃÂ§ÃÂ ÃÂ¾ÃÂ§ÃÂÃÂ§ÃÂ {0} ÃÂÃÂ§ÃÂÃÂ¹ÃÂªÃÂ¨ÃÂ± ÃÂ§ÃÂ³ÃÂª.
+    TIME_MISSING=ÃÂ²ÃÂÃÂ§ÃÂ {0} ÃÂÃÂ§ÃÂÃÂµ ÃÂ§ÃÂ³ÃÂª.
+    TERM_SUCCESSFULLY_ADD_TO_TERM=ÃÂªÃÂ±ÃÂ {0} ÃÂ¨ÃÂ§ ÃÂÃÂÃÂÃÂÃÂÃÂª ÃÂ¨ÃÂ ÃÂ¯ÃÂÃÂ±ÃÂ ÃÂ§ÃÂ¶ÃÂ§ÃÂÃÂ ÃÂ´ÃÂ¯.
 
-# Ø«Ø¨ØªâÙØ§Ù Ù ÙØ§Ú¯ÛÙ
-student.register.success={0} Ø¹Ø²ÛØ²Ø Ø´ÙØ§ Ø¨Ø§ ÙÙÙÙÛØª Ø¯Ø± Ø±Ø´ØªÙ {1} Ø«Ø¨Øª ÙØ§Ù Ø´Ø¯ÛØ¯. Ù¾Ø³ Ø§Ø² ØªØ§ÛÛØ¯ Ø§Ú©Ø§ÙØª Ú©Ø§Ø±Ø¨Ø±ÛØ ÙÛâØªÙØ§ÙÛØ¯ Ø§ÙØªØ®Ø§Ø¨ ÙØ§Ø­Ø¯ ØªØ±Ù Ø¬Ø¯ÛØ¯ Ø±Ø§ Ø§ÙØ¬Ø§Ù Ø¯ÙÛØ¯.
-user.login.success={0} Ø¹Ø²ÛØ²Ø ÙØ±ÙØ¯ Ø´ÙØ§ Ø¨Ø§ ÙÙÙÙÛØª Ø§ÙØ¬Ø§Ù Ø´Ø¯. Ø®ÙØ´ Ø¢ÙØ¯ÛØ¯!
+    # ÃÂ«ÃÂ¨ÃÂªÃ¢ÂÂÃÂÃÂ§ÃÂ ÃÂ ÃÂÃÂ§ÃÂ¯ÃÂÃÂ
+    student.register.success={0} ÃÂ¹ÃÂ²ÃÂÃÂ²ÃÂ ÃÂ´ÃÂÃÂ§ ÃÂ¨ÃÂ§ ÃÂÃÂÃÂÃÂÃÂÃÂª ÃÂ¯ÃÂ± ÃÂ±ÃÂ´ÃÂªÃÂ {1} ÃÂ«ÃÂ¨ÃÂª ÃÂÃÂ§ÃÂ ÃÂ´ÃÂ¯ÃÂÃÂ¯. ÃÂ¾ÃÂ³ ÃÂ§ÃÂ² ÃÂªÃÂ§ÃÂÃÂÃÂ¯ ÃÂ§ÃÂ©ÃÂ§ÃÂÃÂª ÃÂ©ÃÂ§ÃÂ±ÃÂ¨ÃÂ±ÃÂÃÂ ÃÂÃÂÃ¢ÂÂÃÂªÃÂÃÂ§ÃÂÃÂÃÂ¯ ÃÂ§ÃÂÃÂªÃÂ®ÃÂ§ÃÂ¨ ÃÂÃÂ§ÃÂ­ÃÂ¯ ÃÂªÃÂ±ÃÂ ÃÂ¬ÃÂ¯ÃÂÃÂ¯ ÃÂ±ÃÂ§ ÃÂ§ÃÂÃÂ¬ÃÂ§ÃÂ ÃÂ¯ÃÂÃÂÃÂ¯.
+    user.login.success={0} ÃÂ¹ÃÂ²ÃÂÃÂ²ÃÂ ÃÂÃÂ±ÃÂÃÂ¯ ÃÂ´ÃÂÃÂ§ ÃÂ¨ÃÂ§ ÃÂÃÂÃÂÃÂÃÂÃÂª ÃÂ§ÃÂÃÂ¬ÃÂ§ÃÂ ÃÂ´ÃÂ¯. ÃÂ®ÃÂÃÂ´ ÃÂ¢ÃÂÃÂ¯ÃÂÃÂ¯!
 
-# ÙÙØ´ Ø§Ø¶Ø§ÙÙ Ø´Ø¯Ù
-error.person.already.exists=شخصی با کد ملی {0} از قبل وجود دارد
-error.major.not.found=رشته‌ای با نام {0} پیدا نشد
-error.role.not.found=نقش {0} پیدا نشد
-auth.login.success=خوش آمدید {0}
-error.auth.invalid.credentials=نام کاربری یا رمز عبور نادرست است
-error.auth.account.inactive=حساب کاربری {0} غیرفعال است
-error.account.not.found=حساب کاربری {0} یافت نشد
-error.account.locked=حساب کاربری شما قفل شده است
-error.account.suspended=حساب کاربری شما تعلیق شده است
+    # ÃÂÃÂÃÂ´ ÃÂ§ÃÂ¶ÃÂ§ÃÂÃÂ ÃÂ´ÃÂ¯ÃÂ
+    error.person.already.exists=Ø´Ø®ØµÛ Ø¨Ø§ Ú©Ø¯ ÙÙÛ {0} Ø§Ø² ÙØ¨Ù ÙØ¬ÙØ¯ Ø¯Ø§Ø±Ø¯
+    error.major.not.found=Ø±Ø´ØªÙâØ§Û Ø¨Ø§ ÙØ§Ù {0} Ù¾ÛØ¯Ø§ ÙØ´Ø¯
+    error.role.not.found=ÙÙØ´ {0} Ù¾ÛØ¯Ø§ ÙØ´Ø¯
+    auth.login.success=Ø®ÙØ´ Ø¢ÙØ¯ÛØ¯ {0}
+    error.auth.invalid.credentials=ÙØ§Ù Ú©Ø§Ø±Ø¨Ø±Û ÛØ§ Ø±ÙØ² Ø¹Ø¨ÙØ± ÙØ§Ø¯Ø±Ø³Øª Ø§Ø³Øª
+    error.auth.account.inactive=Ø­Ø³Ø§Ø¨ Ú©Ø§Ø±Ø¨Ø±Û {0} ØºÛØ±ÙØ¹Ø§Ù Ø§Ø³Øª
+    error.account.not.found=Ø­Ø³Ø§Ø¨ Ú©Ø§Ø±Ø¨Ø±Û {0} ÛØ§ÙØª ÙØ´Ø¯
+    error.account.locked=Ø­Ø³Ø§Ø¨ Ú©Ø§Ø±Ø¨Ø±Û Ø´ÙØ§ ÙÙÙ Ø´Ø¯Ù Ø§Ø³Øª
+    error.account.suspended=Ø­Ø³Ø§Ø¨ Ú©Ø§Ø±Ø¨Ø±Û Ø´ÙØ§ ØªØ¹ÙÛÙ Ø´Ø¯Ù Ø§Ø³Øª
 
-user.register.success=کاربر {0} با موفقیت ثبت نام شد.
-success.active.account=حساب {0} با موفقیت فعال شد.
-account.not.found=حساب {0} پیدا نشد
-error.person.already.has.role=کاربر با کد ملی {0} قبلاً نقش {1} را دارد.
-success.change.password=رمز عبور کاربر {0} با موفقیت تغییر کرد.
-list.of.userRole=لیست نقش‌های کاربر.
+    user.register.success=Ú©Ø§Ø±Ø¨Ø± {0} Ø¨Ø§ ÙÙÙÙÛØª Ø«Ø¨Øª ÙØ§Ù Ø´Ø¯.
+    success.active.account=Ø­Ø³Ø§Ø¨ {0} Ø¨Ø§ ÙÙÙÙÛØª ÙØ¹Ø§Ù Ø´Ø¯.
+    account.not.found=Ø­Ø³Ø§Ø¨ {0} Ù¾ÛØ¯Ø§ ÙØ´Ø¯
+    error.person.already.has.role=Ú©Ø§Ø±Ø¨Ø± Ø¨Ø§ Ú©Ø¯ ÙÙÛ {0} ÙØ¨ÙØ§Ù ÙÙØ´ {1} Ø±Ø§ Ø¯Ø§Ø±Ø¯.
+    success.change.password=Ø±ÙØ² Ø¹Ø¨ÙØ± Ú©Ø§Ø±Ø¨Ø± {0} Ø¨Ø§ ÙÙÙÙÛØª ØªØºÛÛØ± Ú©Ø±Ø¯.
+    list.of.userRole=ÙÛØ³Øª ÙÙØ´âÙØ§Û Ú©Ø§Ø±Ø¨Ø±.
