--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,7 +7,6 @@ ACCOUNT_NOT_ACTIVE=Account {0} not active
 ACCOUNT_NOT_FOUND=Account {0} not found
 PERSON_NOT_FOUND=Person {0} not found
 PASSWORD_NOT_MATCH=The password does not match the current password.
-ENTITY_NOT_FOUND=Entity not found with ID: {0}
 COURSE_ALREADY_EXISTS=Course with the same name already exists in this major
 MAJOR_INACTIVE=Cannot add course to inactive major
 DUPLICATE_MAJOR_NAME=Major already exists with name: {0}
@@ -25,7 +24,6 @@ student.register.success=Dear {0}, you have been successfully registered in the 
 user.login.success=Dear {0}, you have successfully logged in. Welcome!
 success.add.role=Role {0} has been successfully added to the user.
 error.person.already.exists=Person with NationalCode {0} already exists
-error.major.not.found=Major with name {0} not found
 error.role.not.found=Role {0} not found
 auth.login.success=Welcome {0}
 error.auth.invalid.credentials=Invalid username or password
@@ -39,4 +37,30 @@ account.not.found=Account {0} not found
 error.person.already.has.role=Person with national code {0} already has the role {1}.
 success.change.password=Password for user {0} changed successfully.
 list.of.userRole=List of roles for the user.
+course.creation.success=Course created successfully!
+
+course.duplicate=Course with name {0} already exists!
+
+user.logout.success=You have successfully logged out.
+
+courses.get.success=Courses retrieved successfully!
+course.update.success=Course updated successfully! 
+
+
+# Major Messages - Success
+major.creation.success=Major created successfully
+major.update.success=Major updated successfully
+major.get.success=Major retrieved successfully
+major.list.success=Majors retrieved successfully
+major.courses.get.success=Courses retrieved successfully
+major.delete.success=Major deleted successfully
+
+# Major Messages - Errors
+error.major.not.found=Major not found with ID: {0}
+error.major.duplicate.name=Major with name ''{0}'' already exists
+error.major.already.inactive=Major ''{0}'' is already inactive
+error.major.name.empty=Major name cannot be empty
+
+# General Messages
+ENTITY_NOT_FOUND=Entity not found with ID: {0}
 
