feat(term) : implement crud api operation for term

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -63,4 +63,13 @@ error.major.name.empty=Major name cannot be empty
 
 # General Messages
 ENTITY_NOT_FOUND=Entity not found with ID: {0}
+entity.major.notfound=Major not found with the given name.
+entity.term.notfound=Term not found with the given id.
 
+access.denied.for.delete.term=Access denied. You cannot modify an active term.
+
+term.created=Term created successfully.
+term.updated=Term updated successfully.
+term.deleted=Term deleted successfully.
+term.listed=All terms retrieved successfully.
+term.exists=Term with this type already exists for the selected major.
