feat(term): add term feature and OfferedCourse
- manager can select offered course for a term
- manager can create new  term

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -73,3 +73,4 @@ term.updated=Term updated successfully.
 term.deleted=Term deleted successfully.
 term.listed=All terms retrieved successfully.
 term.exists=Term with this type already exists for the selected major.
+person.not.founded= person not found with this username: {0}
