--- a/src/main/resources/messages_fa.properties
+++ b/src/main/resources/messages_fa.properties
@@ -1,74 +1,75 @@
-﻿ROLE_NOT_FOUND = ÃÂÃÂÃÂ´ {0} ÃÂÃÂ§ÃÂÃÂª ÃÂÃÂ´ÃÂ¯.
-USER_ALREADY_HAS_ROLE = ÃÂ©ÃÂ§ÃÂ±ÃÂ¨ÃÂ± ÃÂÃÂ¨ÃÂÃÂ§ÃÂ ÃÂÃÂÃÂ´ {0} ÃÂ±ÃÂ§ ÃÂ¯ÃÂ§ÃÂ±ÃÂ¯.
-PERSON_EXISTS = ÃÂ´ÃÂ®ÃÂµ ÃÂ¨ÃÂ§ {0} ÃÂÃÂ¨ÃÂÃÂ§ÃÂ ÃÂ¯ÃÂ± ÃÂ³ÃÂÃÂ³ÃÂªÃÂ ÃÂ«ÃÂ¨ÃÂª ÃÂ´ÃÂ¯ÃÂ ÃÂ§ÃÂ³ÃÂª.
+﻿ROLE_NOT_FOUND = ÃÂÃÂÃÂÃÂÃÂÃÂ´ {0} ÃÂÃÂÃÂÃÂ§ÃÂÃÂÃÂÃÂª ÃÂÃÂÃÂÃÂ´ÃÂÃÂ¯.
+USER_ALREADY_HAS_ROLE = ÃÂÃÂ©ÃÂÃÂ§ÃÂÃÂ±ÃÂÃÂ¨ÃÂÃÂ± ÃÂÃÂÃÂÃÂ¨ÃÂÃÂÃÂÃÂ§ÃÂÃÂ ÃÂÃÂÃÂÃÂÃÂÃÂ´ {0} ÃÂÃÂ±ÃÂÃÂ§ ÃÂÃÂ¯ÃÂÃÂ§ÃÂÃÂ±ÃÂÃÂ¯.
+PERSON_EXISTS = ÃÂÃÂ´ÃÂÃÂ®ÃÂÃÂµ ÃÂÃÂ¨ÃÂÃÂ§ {0} ÃÂÃÂÃÂÃÂ¨ÃÂÃÂÃÂÃÂ§ÃÂÃÂ ÃÂÃÂ¯ÃÂÃÂ± ÃÂÃÂ³ÃÂÃÂÃÂÃÂ³ÃÂÃÂªÃÂÃÂ ÃÂÃÂ«ÃÂÃÂ¨ÃÂÃÂª ÃÂÃÂ´ÃÂÃÂ¯ÃÂÃÂ ÃÂÃÂ§ÃÂÃÂ³ÃÂÃÂª.
 
 
-MAJOR_NOT_FOUND = ÃÂ±ÃÂ´ÃÂªÃÂÃ¢ÂÂÃÂ {0} ÃÂÃÂ§ÃÂÃÂª ÃÂÃÂ´ÃÂ¯.
-MAJOR_INACTIVE = ÃÂ±ÃÂ´ÃÂªÃÂÃ¢ÂÂÃÂ {0} ÃÂºÃÂÃÂ±ÃÂÃÂ¹ÃÂ§ÃÂ ÃÂ§ÃÂ³ÃÂª.
-DUPLICATE_MAJOR_NAME = ÃÂ±ÃÂ´ÃÂªÃÂÃ¢ÂÂÃÂ§ÃÂ ÃÂ¨ÃÂ§ ÃÂÃÂ§ÃÂ {0} ÃÂÃÂ¨ÃÂÃÂ§ÃÂ ÃÂ«ÃÂ¨ÃÂª ÃÂ´ÃÂ¯ÃÂ ÃÂ§ÃÂ³ÃÂª.
-COURSE_ALREADY_EXISTS = ÃÂ¯ÃÂ±ÃÂ³ {0} ÃÂÃÂ¨ÃÂÃÂ§ÃÂ ÃÂ«ÃÂ¨ÃÂª ÃÂ´ÃÂ¯ÃÂ ÃÂ§ÃÂ³ÃÂª.
-COURSE_NOT_ACTIVE = ÃÂ¯ÃÂ±ÃÂ³ {0} ÃÂºÃÂÃÂ±ÃÂÃÂ¹ÃÂ§ÃÂ ÃÂ§ÃÂ³ÃÂª.
-COURSE_NOT_EXIST_IN_COURSE = ÃÂ¯ÃÂ±ÃÂ³ {0} ÃÂ¯ÃÂ± ÃÂ¯ÃÂÃÂ±ÃÂÃ¢ÂÂÃÂ ÃÂ§ÃÂÃÂªÃÂ®ÃÂ§ÃÂ¨ÃÂ ÃÂÃÂÃÂ¬ÃÂÃÂ¯ ÃÂÃÂÃÂ³ÃÂª.
-YOU_CAN_CHOOSE_COURSE = ÃÂÃÂÃ¢ÂÂÃÂªÃÂÃÂ§ÃÂÃÂÃÂ¯ ÃÂ¯ÃÂ±ÃÂ³ ÃÂ±ÃÂ§ ÃÂ§ÃÂÃÂªÃÂ®ÃÂ§ÃÂ¨ ÃÂ©ÃÂÃÂÃÂ¯.
-THE_CAPACITY_IS_FULL = ÃÂ¸ÃÂ±ÃÂÃÂÃÂª {0} ÃÂªÃÂ©ÃÂÃÂÃÂ ÃÂ´ÃÂ¯ÃÂ ÃÂ§ÃÂ³ÃÂª
+MAJOR_NOT_FOUND = ÃÂÃÂ±ÃÂÃÂ´ÃÂÃÂªÃÂÃÂÃÂ¢ÃÂÃÂÃÂÃÂ {0} ÃÂÃÂÃÂÃÂ§ÃÂÃÂÃÂÃÂª ÃÂÃÂÃÂÃÂ´ÃÂÃÂ¯.
+MAJOR_INACTIVE = ÃÂÃÂ±ÃÂÃÂ´ÃÂÃÂªÃÂÃÂÃÂ¢ÃÂÃÂÃÂÃÂ {0} ÃÂÃÂºÃÂÃÂÃÂÃÂ±ÃÂÃÂÃÂÃÂ¹ÃÂÃÂ§ÃÂÃÂ ÃÂÃÂ§ÃÂÃÂ³ÃÂÃÂª.
+DUPLICATE_MAJOR_NAME = ÃÂÃÂ±ÃÂÃÂ´ÃÂÃÂªÃÂÃÂÃÂ¢ÃÂÃÂÃÂÃÂ§ÃÂÃÂ ÃÂÃÂ¨ÃÂÃÂ§ ÃÂÃÂÃÂÃÂ§ÃÂÃÂ {0} ÃÂÃÂÃÂÃÂ¨ÃÂÃÂÃÂÃÂ§ÃÂÃÂ ÃÂÃÂ«ÃÂÃÂ¨ÃÂÃÂª ÃÂÃÂ´ÃÂÃÂ¯ÃÂÃÂ ÃÂÃÂ§ÃÂÃÂ³ÃÂÃÂª.
+COURSE_ALREADY_EXISTS = ÃÂÃÂ¯ÃÂÃÂ±ÃÂÃÂ³ {0} ÃÂÃÂÃÂÃÂ¨ÃÂÃÂÃÂÃÂ§ÃÂÃÂ ÃÂÃÂ«ÃÂÃÂ¨ÃÂÃÂª ÃÂÃÂ´ÃÂÃÂ¯ÃÂÃÂ ÃÂÃÂ§ÃÂÃÂ³ÃÂÃÂª.
+COURSE_NOT_ACTIVE = ÃÂÃÂ¯ÃÂÃÂ±ÃÂÃÂ³ {0} ÃÂÃÂºÃÂÃÂÃÂÃÂ±ÃÂÃÂÃÂÃÂ¹ÃÂÃÂ§ÃÂÃÂ ÃÂÃÂ§ÃÂÃÂ³ÃÂÃÂª.
+COURSE_NOT_EXIST_IN_COURSE = ÃÂÃÂ¯ÃÂÃÂ±ÃÂÃÂ³ {0} ÃÂÃÂ¯ÃÂÃÂ± ÃÂÃÂ¯ÃÂÃÂÃÂÃÂ±ÃÂÃÂÃÂ¢ÃÂÃÂÃÂÃÂ ÃÂÃÂ§ÃÂÃÂÃÂÃÂªÃÂÃÂ®ÃÂÃÂ§ÃÂÃÂ¨ÃÂÃÂ ÃÂÃÂÃÂÃÂÃÂÃÂ¬ÃÂÃÂÃÂÃÂ¯ ÃÂÃÂÃÂÃÂÃÂÃÂ³ÃÂÃÂª.
+YOU_CAN_CHOOSE_COURSE = ÃÂÃÂÃÂÃÂÃÂ¢ÃÂÃÂÃÂÃÂªÃÂÃÂÃÂÃÂ§ÃÂÃÂÃÂÃÂÃÂÃÂ¯ ÃÂÃÂ¯ÃÂÃÂ±ÃÂÃÂ³ ÃÂÃÂ±ÃÂÃÂ§ ÃÂÃÂ§ÃÂÃÂÃÂÃÂªÃÂÃÂ®ÃÂÃÂ§ÃÂÃÂ¨ ÃÂÃÂ©ÃÂÃÂÃÂÃÂÃÂÃÂ¯.
+THE_CAPACITY_IS_FULL = ÃÂÃÂ¸ÃÂÃÂ±ÃÂÃÂÃÂÃÂÃÂÃÂª {0} ÃÂÃÂªÃÂÃÂ©ÃÂÃÂÃÂÃÂÃÂÃÂ ÃÂÃÂ´ÃÂÃÂ¯ÃÂÃÂ ÃÂÃÂ§ÃÂÃÂ³ÃÂÃÂª
 
-USERNAME_NOT_FOUND = ÃÂÃÂ§ÃÂ ÃÂ©ÃÂ§ÃÂ±ÃÂ¨ÃÂ±ÃÂ {0} ÃÂÃÂ§ÃÂÃÂª ÃÂÃÂ´ÃÂ¯.
-ACCOUNT_NOT_ACTIVE = ÃÂ§ÃÂ©ÃÂ§ÃÂÃÂª {0} ÃÂÃÂ¹ÃÂ§ÃÂ ÃÂÃÂÃÂ³ÃÂª.
-ACCOUNT_NOT_FOUND = ÃÂ§ÃÂ©ÃÂ§ÃÂÃÂª {0} ÃÂÃÂ§ÃÂÃÂª ÃÂÃÂ´ÃÂ¯.
-PERSON_NOT_FOUND = ÃÂ´ÃÂ®ÃÂµ {0} ÃÂÃÂ§ÃÂÃÂª ÃÂÃÂ´ÃÂ¯.
-PASSWORD_NOT_MATCH = ÃÂ±ÃÂÃÂ² ÃÂ¹ÃÂ¨ÃÂÃÂ± ÃÂÃÂ§ÃÂ±ÃÂ¯ ÃÂ´ÃÂ¯ÃÂ ÃÂ¨ÃÂ§ ÃÂ±ÃÂÃÂ² ÃÂÃÂÃÂ¬ÃÂÃÂ¯ ÃÂÃÂ·ÃÂ§ÃÂ¨ÃÂÃÂª ÃÂÃÂ¯ÃÂ§ÃÂ±ÃÂ¯.
-TIME_SELECT_UNIT_NOT_STARTED = ÃÂ²ÃÂÃÂ§ÃÂ ÃÂ§ÃÂÃÂªÃÂ®ÃÂ§ÃÂ¨ ÃÂÃÂ§ÃÂ­ÃÂ¯ ÃÂ¨ÃÂ±ÃÂ§ÃÂ {0} ÃÂ¢ÃÂºÃÂ§ÃÂ² ÃÂÃÂ´ÃÂ¯ÃÂ ÃÂ§ÃÂ³ÃÂª.
-TERM_EXCEPTION = ÃÂ®ÃÂ·ÃÂ§ ÃÂ¯ÃÂ± ÃÂªÃÂ±ÃÂ {0} ÃÂ±ÃÂ® ÃÂ¯ÃÂ§ÃÂ¯ÃÂ ÃÂ§ÃÂ³ÃÂª.
-START_TIME_INVALID = ÃÂ²ÃÂÃÂ§ÃÂ ÃÂ´ÃÂ±ÃÂÃÂ¹ {0} ÃÂÃÂ§ÃÂÃÂ¹ÃÂªÃÂ¨ÃÂ± ÃÂ§ÃÂ³ÃÂª.
-END_TIME_INVALID = ÃÂ²ÃÂÃÂ§ÃÂ ÃÂ¾ÃÂ§ÃÂÃÂ§ÃÂ {0} ÃÂÃÂ§ÃÂÃÂ¹ÃÂªÃÂ¨ÃÂ± ÃÂ§ÃÂ³ÃÂª.
-TIME_MISSING = ÃÂ²ÃÂÃÂ§ÃÂ {0} ÃÂÃÂ§ÃÂÃÂµ ÃÂ§ÃÂ³ÃÂª.
-TERM_SUCCESSFULLY_ADD_TO_TERM = ÃÂªÃÂ±ÃÂ {0} ÃÂ¨ÃÂ§ ÃÂÃÂÃÂÃÂÃÂÃÂª ÃÂ¨ÃÂ ÃÂ¯ÃÂÃÂ±ÃÂ ÃÂ§ÃÂ¶ÃÂ§ÃÂÃÂ ÃÂ´ÃÂ¯.
+USERNAME_NOT_FOUND = ÃÂÃÂÃÂÃÂ§ÃÂÃÂ ÃÂÃÂ©ÃÂÃÂ§ÃÂÃÂ±ÃÂÃÂ¨ÃÂÃÂ±ÃÂÃÂ {0} ÃÂÃÂÃÂÃÂ§ÃÂÃÂÃÂÃÂª ÃÂÃÂÃÂÃÂ´ÃÂÃÂ¯.
+ACCOUNT_NOT_ACTIVE = ÃÂÃÂ§ÃÂÃÂ©ÃÂÃÂ§ÃÂÃÂÃÂÃÂª {0} ÃÂÃÂÃÂÃÂ¹ÃÂÃÂ§ÃÂÃÂ ÃÂÃÂÃÂÃÂÃÂÃÂ³ÃÂÃÂª.
+ACCOUNT_NOT_FOUND = ÃÂÃÂ§ÃÂÃÂ©ÃÂÃÂ§ÃÂÃÂÃÂÃÂª {0} ÃÂÃÂÃÂÃÂ§ÃÂÃÂÃÂÃÂª ÃÂÃÂÃÂÃÂ´ÃÂÃÂ¯.
+PERSON_NOT_FOUND = ÃÂÃÂ´ÃÂÃÂ®ÃÂÃÂµ {0} ÃÂÃÂÃÂÃÂ§ÃÂÃÂÃÂÃÂª ÃÂÃÂÃÂÃÂ´ÃÂÃÂ¯.
+PASSWORD_NOT_MATCH = ÃÂÃÂ±ÃÂÃÂÃÂÃÂ² ÃÂÃÂ¹ÃÂÃÂ¨ÃÂÃÂÃÂÃÂ± ÃÂÃÂÃÂÃÂ§ÃÂÃÂ±ÃÂÃÂ¯ ÃÂÃÂ´ÃÂÃÂ¯ÃÂÃÂ ÃÂÃÂ¨ÃÂÃÂ§ ÃÂÃÂ±ÃÂÃÂÃÂÃÂ² ÃÂÃÂÃÂÃÂÃÂÃÂ¬ÃÂÃÂÃÂÃÂ¯ ÃÂÃÂÃÂÃÂ·ÃÂÃÂ§ÃÂÃÂ¨ÃÂÃÂÃÂÃÂª ÃÂÃÂÃÂÃÂ¯ÃÂÃÂ§ÃÂÃÂ±ÃÂÃÂ¯.
+TIME_SELECT_UNIT_NOT_STARTED = ÃÂÃÂ²ÃÂÃÂÃÂÃÂ§ÃÂÃÂ ÃÂÃÂ§ÃÂÃÂÃÂÃÂªÃÂÃÂ®ÃÂÃÂ§ÃÂÃÂ¨ ÃÂÃÂÃÂÃÂ§ÃÂÃÂ­ÃÂÃÂ¯ ÃÂÃÂ¨ÃÂÃÂ±ÃÂÃÂ§ÃÂÃÂ {0} ÃÂÃÂ¢ÃÂÃÂºÃÂÃÂ§ÃÂÃÂ² ÃÂÃÂÃÂÃÂ´ÃÂÃÂ¯ÃÂÃÂ ÃÂÃÂ§ÃÂÃÂ³ÃÂÃÂª.
+TERM_EXCEPTION = ÃÂÃÂ®ÃÂÃÂ·ÃÂÃÂ§ ÃÂÃÂ¯ÃÂÃÂ± ÃÂÃÂªÃÂÃÂ±ÃÂÃÂ {0} ÃÂÃÂ±ÃÂÃÂ® ÃÂÃÂ¯ÃÂÃÂ§ÃÂÃÂ¯ÃÂÃÂ ÃÂÃÂ§ÃÂÃÂ³ÃÂÃÂª.
+START_TIME_INVALID = ÃÂÃÂ²ÃÂÃÂÃÂÃÂ§ÃÂÃÂ ÃÂÃÂ´ÃÂÃÂ±ÃÂÃÂÃÂÃÂ¹ {0} ÃÂÃÂÃÂÃÂ§ÃÂÃÂÃÂÃÂ¹ÃÂÃÂªÃÂÃÂ¨ÃÂÃÂ± ÃÂÃÂ§ÃÂÃÂ³ÃÂÃÂª.
+END_TIME_INVALID = ÃÂÃÂ²ÃÂÃÂÃÂÃÂ§ÃÂÃÂ ÃÂÃÂ¾ÃÂÃÂ§ÃÂÃÂÃÂÃÂ§ÃÂÃÂ {0} ÃÂÃÂÃÂÃÂ§ÃÂÃÂÃÂÃÂ¹ÃÂÃÂªÃÂÃÂ¨ÃÂÃÂ± ÃÂÃÂ§ÃÂÃÂ³ÃÂÃÂª.
+TIME_MISSING = ÃÂÃÂ²ÃÂÃÂÃÂÃÂ§ÃÂÃÂ {0} ÃÂÃÂÃÂÃÂ§ÃÂÃÂÃÂÃÂµ ÃÂÃÂ§ÃÂÃÂ³ÃÂÃÂª.
+TERM_SUCCESSFULLY_ADD_TO_TERM = ÃÂÃÂªÃÂÃÂ±ÃÂÃÂ {0} ÃÂÃÂ¨ÃÂÃÂ§ ÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂª ÃÂÃÂ¨ÃÂÃÂ ÃÂÃÂ¯ÃÂÃÂÃÂÃÂ±ÃÂÃÂ ÃÂÃÂ§ÃÂÃÂ¶ÃÂÃÂ§ÃÂÃÂÃÂÃÂ ÃÂÃÂ´ÃÂÃÂ¯.
 
-student.register.success = {0} ÃÂ¹ÃÂ²ÃÂÃÂ²ÃÂ ÃÂ´ÃÂÃÂ§ ÃÂ¨ÃÂ§ ÃÂÃÂÃÂÃÂÃÂÃÂª ÃÂ¯ÃÂ± ÃÂ±ÃÂ´ÃÂªÃÂÃ¢ÂÂÃÂ {1} ÃÂ«ÃÂ¨ÃÂªÃ¢ÂÂÃÂÃÂ§ÃÂ ÃÂ´ÃÂ¯ÃÂÃÂ¯.
-user.login.success = {0} ÃÂ¹ÃÂ²ÃÂÃÂ²ÃÂ ÃÂÃÂ±ÃÂÃÂ¯ ÃÂ´ÃÂÃÂ§ ÃÂ¨ÃÂ§ ÃÂÃÂÃÂÃÂÃÂÃÂª ÃÂ§ÃÂÃÂ¬ÃÂ§ÃÂ ÃÂ´ÃÂ¯. ÃÂ®ÃÂÃÂ´ ÃÂ¢ÃÂÃÂ¯ÃÂÃÂ¯!
+student.register.success = {0} ÃÂÃÂ¹ÃÂÃÂ²ÃÂÃÂÃÂÃÂ²ÃÂÃÂ ÃÂÃÂ´ÃÂÃÂÃÂÃÂ§ ÃÂÃÂ¨ÃÂÃÂ§ ÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂª ÃÂÃÂ¯ÃÂÃÂ± ÃÂÃÂ±ÃÂÃÂ´ÃÂÃÂªÃÂÃÂÃÂ¢ÃÂÃÂÃÂÃÂ {1} ÃÂÃÂ«ÃÂÃÂ¨ÃÂÃÂªÃÂ¢ÃÂÃÂÃÂÃÂÃÂÃÂ§ÃÂÃÂ ÃÂÃÂ´ÃÂÃÂ¯ÃÂÃÂÃÂÃÂ¯.
+user.login.success = {0} ÃÂÃÂ¹ÃÂÃÂ²ÃÂÃÂÃÂÃÂ²ÃÂÃÂ ÃÂÃÂÃÂÃÂ±ÃÂÃÂÃÂÃÂ¯ ÃÂÃÂ´ÃÂÃÂÃÂÃÂ§ ÃÂÃÂ¨ÃÂÃÂ§ ÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂª ÃÂÃÂ§ÃÂÃÂÃÂÃÂ¬ÃÂÃÂ§ÃÂÃÂ ÃÂÃÂ´ÃÂÃÂ¯. ÃÂÃÂ®ÃÂÃÂÃÂÃÂ´ ÃÂÃÂ¢ÃÂÃÂÃÂÃÂ¯ÃÂÃÂÃÂÃÂ¯!
 
-error.person.already.exists = ÃÂ´ÃÂ®ÃÂµÃÂ ÃÂ¨ÃÂ§ ÃÂ©ÃÂ¯ ÃÂÃÂÃÂ {0} ÃÂ§ÃÂ² ÃÂÃÂ¨ÃÂ ÃÂÃÂ¬ÃÂÃÂ¯ ÃÂ¯ÃÂ§ÃÂ±ÃÂ¯.
-error.role.not.found = ÃÂÃÂÃÂ´ {0} ÃÂ¾ÃÂÃÂ¯ÃÂ§ ÃÂÃÂ´ÃÂ¯.
-auth.login.success = ÃÂ®ÃÂÃÂ´ ÃÂ¢ÃÂÃÂ¯ÃÂÃÂ¯ {0}.
-error.auth.invalid.credentials = ÃÂÃÂ§ÃÂ ÃÂ©ÃÂ§ÃÂ±ÃÂ¨ÃÂ±ÃÂ ÃÂÃÂ§ ÃÂ±ÃÂÃÂ² ÃÂ¹ÃÂ¨ÃÂÃÂ± ÃÂÃÂ§ÃÂ¯ÃÂ±ÃÂ³ÃÂª ÃÂ§ÃÂ³ÃÂª.
-error.auth.account.inactive = ÃÂ­ÃÂ³ÃÂ§ÃÂ¨ ÃÂ©ÃÂ§ÃÂ±ÃÂ¨ÃÂ±ÃÂ {0} ÃÂºÃÂÃÂ±ÃÂÃÂ¹ÃÂ§ÃÂ ÃÂ§ÃÂ³ÃÂª.
-error.account.not.found = ÃÂ­ÃÂ³ÃÂ§ÃÂ¨ ÃÂ©ÃÂ§ÃÂ±ÃÂ¨ÃÂ±ÃÂ {0} ÃÂÃÂ§ÃÂÃÂª ÃÂÃÂ´ÃÂ¯.
-error.account.locked = ÃÂ­ÃÂ³ÃÂ§ÃÂ¨ ÃÂ©ÃÂ§ÃÂ±ÃÂ¨ÃÂ±ÃÂ ÃÂ´ÃÂÃÂ§ ÃÂÃÂÃÂ ÃÂ´ÃÂ¯ÃÂ ÃÂ§ÃÂ³ÃÂª.
-error.account.suspended = ÃÂ­ÃÂ³ÃÂ§ÃÂ¨ ÃÂ©ÃÂ§ÃÂ±ÃÂ¨ÃÂ±ÃÂ ÃÂ´ÃÂÃÂ§ ÃÂªÃÂ¹ÃÂÃÂÃÂ ÃÂ´ÃÂ¯ÃÂ ÃÂ§ÃÂ³ÃÂª.
+error.person.already.exists = ÃÂÃÂ´ÃÂÃÂ®ÃÂÃÂµÃÂÃÂ ÃÂÃÂ¨ÃÂÃÂ§ ÃÂÃÂ©ÃÂÃÂ¯ ÃÂÃÂÃÂÃÂÃÂÃÂ {0} ÃÂÃÂ§ÃÂÃÂ² ÃÂÃÂÃÂÃÂ¨ÃÂÃÂ ÃÂÃÂÃÂÃÂ¬ÃÂÃÂÃÂÃÂ¯ ÃÂÃÂ¯ÃÂÃÂ§ÃÂÃÂ±ÃÂÃÂ¯.
+error.role.not.found = ÃÂÃÂÃÂÃÂÃÂÃÂ´ {0} ÃÂÃÂ¾ÃÂÃÂÃÂÃÂ¯ÃÂÃÂ§ ÃÂÃÂÃÂÃÂ´ÃÂÃÂ¯.
+auth.login.success = ÃÂÃÂ®ÃÂÃÂÃÂÃÂ´ ÃÂÃÂ¢ÃÂÃÂÃÂÃÂ¯ÃÂÃÂÃÂÃÂ¯ {0}.
+error.auth.invalid.credentials = ÃÂÃÂÃÂÃÂ§ÃÂÃÂ ÃÂÃÂ©ÃÂÃÂ§ÃÂÃÂ±ÃÂÃÂ¨ÃÂÃÂ±ÃÂÃÂ ÃÂÃÂÃÂÃÂ§ ÃÂÃÂ±ÃÂÃÂÃÂÃÂ² ÃÂÃÂ¹ÃÂÃÂ¨ÃÂÃÂÃÂÃÂ± ÃÂÃÂÃÂÃÂ§ÃÂÃÂ¯ÃÂÃÂ±ÃÂÃÂ³ÃÂÃÂª ÃÂÃÂ§ÃÂÃÂ³ÃÂÃÂª.
+error.auth.account.inactive = ÃÂÃÂ­ÃÂÃÂ³ÃÂÃÂ§ÃÂÃÂ¨ ÃÂÃÂ©ÃÂÃÂ§ÃÂÃÂ±ÃÂÃÂ¨ÃÂÃÂ±ÃÂÃÂ {0} ÃÂÃÂºÃÂÃÂÃÂÃÂ±ÃÂÃÂÃÂÃÂ¹ÃÂÃÂ§ÃÂÃÂ ÃÂÃÂ§ÃÂÃÂ³ÃÂÃÂª.
+error.account.not.found = ÃÂÃÂ­ÃÂÃÂ³ÃÂÃÂ§ÃÂÃÂ¨ ÃÂÃÂ©ÃÂÃÂ§ÃÂÃÂ±ÃÂÃÂ¨ÃÂÃÂ±ÃÂÃÂ {0} ÃÂÃÂÃÂÃÂ§ÃÂÃÂÃÂÃÂª ÃÂÃÂÃÂÃÂ´ÃÂÃÂ¯.
+error.account.locked = ÃÂÃÂ­ÃÂÃÂ³ÃÂÃÂ§ÃÂÃÂ¨ ÃÂÃÂ©ÃÂÃÂ§ÃÂÃÂ±ÃÂÃÂ¨ÃÂÃÂ±ÃÂÃÂ ÃÂÃÂ´ÃÂÃÂÃÂÃÂ§ ÃÂÃÂÃÂÃÂÃÂÃÂ ÃÂÃÂ´ÃÂÃÂ¯ÃÂÃÂ ÃÂÃÂ§ÃÂÃÂ³ÃÂÃÂª.
+error.account.suspended = ÃÂÃÂ­ÃÂÃÂ³ÃÂÃÂ§ÃÂÃÂ¨ ÃÂÃÂ©ÃÂÃÂ§ÃÂÃÂ±ÃÂÃÂ¨ÃÂÃÂ±ÃÂÃÂ ÃÂÃÂ´ÃÂÃÂÃÂÃÂ§ ÃÂÃÂªÃÂÃÂ¹ÃÂÃÂÃÂÃÂÃÂÃÂ ÃÂÃÂ´ÃÂÃÂ¯ÃÂÃÂ ÃÂÃÂ§ÃÂÃÂ³ÃÂÃÂª.
 
-user.register.success = ÃÂ©ÃÂ§ÃÂ±ÃÂ¨ÃÂ± {0} ÃÂ¨ÃÂ§ ÃÂÃÂÃÂÃÂÃÂÃÂª ÃÂ«ÃÂ¨ÃÂª ÃÂÃÂ§ÃÂ ÃÂ´ÃÂ¯.
-success.active.account = ÃÂ­ÃÂ³ÃÂ§ÃÂ¨ {0} ÃÂ¨ÃÂ§ ÃÂÃÂÃÂÃÂÃÂÃÂª ÃÂÃÂ¹ÃÂ§ÃÂ ÃÂ´ÃÂ¯.
-account.not.found = ÃÂ­ÃÂ³ÃÂ§ÃÂ¨ {0} ÃÂ¾ÃÂÃÂ¯ÃÂ§ ÃÂÃÂ´ÃÂ¯.
-error.person.already.has.role = ÃÂ©ÃÂ§ÃÂ±ÃÂ¨ÃÂ± ÃÂ¨ÃÂ§ ÃÂ©ÃÂ¯ ÃÂÃÂÃÂ {0} ÃÂÃÂ¨ÃÂÃÂ§ÃÂ ÃÂÃÂÃÂ´ {1} ÃÂ±ÃÂ§ ÃÂ¯ÃÂ§ÃÂ±ÃÂ¯.
-success.change.password = ÃÂ±ÃÂÃÂ² ÃÂ¹ÃÂ¨ÃÂÃÂ± ÃÂ©ÃÂ§ÃÂ±ÃÂ¨ÃÂ± {0} ÃÂ¨ÃÂ§ ÃÂÃÂÃÂÃÂÃÂÃÂª ÃÂªÃÂºÃÂÃÂÃÂ± ÃÂ©ÃÂ±ÃÂ¯.
-list.of.userRole = ÃÂÃÂÃÂ³ÃÂª ÃÂÃÂÃÂ´Ã¢ÂÂÃÂÃÂ§ÃÂ ÃÂ©ÃÂ§ÃÂ±ÃÂ¨ÃÂ±ÃÂ§ÃÂ
-user.logout.success =Ø´ÙØ§ Ø¨Ø§ ÙÙÙÙÛØª Ø§Ø² Ø­Ø³Ø§Ø¨ Ú©Ø§Ø±Ø¨Ø±Û Ø®Ø§Ø±Ø¬ Ø´Ø¯ÛØ¯
-course.duplicate=Ø±Ø´ØªÙ '{0}' ÙØ¨ÙØ§Ù Ø«Ø¨Øª Ø´Ø¯Ù Ø§Ø³Øª!
-course.creation.success= Ø¯ÙØ±Ù Ø¨Ø§ ÙÙÙÙÛØª Ø§ÛØ¬Ø§Ø¯ Ø´Ø¯!
-courses.get.success= Ø¯ÙØ±ÙâÙØ§ Ø¨Ø§ ÙÙÙÙÛØª Ø¯Ø±ÛØ§ÙØª Ø´Ø¯ÙØ¯!
-course.update.success= Ø¯ÙØ±Ù Ø¨Ø§ ÙÙÙÙÛØª Ø¨ÙâØ±ÙØ² Ø´Ø¯!
+user.register.success = ÃÂÃÂ©ÃÂÃÂ§ÃÂÃÂ±ÃÂÃÂ¨ÃÂÃÂ± {0} ÃÂÃÂ¨ÃÂÃÂ§ ÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂª ÃÂÃÂ«ÃÂÃÂ¨ÃÂÃÂª ÃÂÃÂÃÂÃÂ§ÃÂÃÂ ÃÂÃÂ´ÃÂÃÂ¯.
+success.active.account = ÃÂÃÂ­ÃÂÃÂ³ÃÂÃÂ§ÃÂÃÂ¨ {0} ÃÂÃÂ¨ÃÂÃÂ§ ÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂª ÃÂÃÂÃÂÃÂ¹ÃÂÃÂ§ÃÂÃÂ ÃÂÃÂ´ÃÂÃÂ¯.
+account.not.found = ÃÂÃÂ­ÃÂÃÂ³ÃÂÃÂ§ÃÂÃÂ¨ {0} ÃÂÃÂ¾ÃÂÃÂÃÂÃÂ¯ÃÂÃÂ§ ÃÂÃÂÃÂÃÂ´ÃÂÃÂ¯.
+error.person.already.has.role = ÃÂÃÂ©ÃÂÃÂ§ÃÂÃÂ±ÃÂÃÂ¨ÃÂÃÂ± ÃÂÃÂ¨ÃÂÃÂ§ ÃÂÃÂ©ÃÂÃÂ¯ ÃÂÃÂÃÂÃÂÃÂÃÂ {0} ÃÂÃÂÃÂÃÂ¨ÃÂÃÂÃÂÃÂ§ÃÂÃÂ ÃÂÃÂÃÂÃÂÃÂÃÂ´ {1} ÃÂÃÂ±ÃÂÃÂ§ ÃÂÃÂ¯ÃÂÃÂ§ÃÂÃÂ±ÃÂÃÂ¯.
+success.change.password = ÃÂÃÂ±ÃÂÃÂÃÂÃÂ² ÃÂÃÂ¹ÃÂÃÂ¨ÃÂÃÂÃÂÃÂ± ÃÂÃÂ©ÃÂÃÂ§ÃÂÃÂ±ÃÂÃÂ¨ÃÂÃÂ± {0} ÃÂÃÂ¨ÃÂÃÂ§ ÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂª ÃÂÃÂªÃÂÃÂºÃÂÃÂÃÂÃÂÃÂÃÂ± ÃÂÃÂ©ÃÂÃÂ±ÃÂÃÂ¯.
+list.of.userRole = ÃÂÃÂÃÂÃÂÃÂÃÂ³ÃÂÃÂª ÃÂÃÂÃÂÃÂÃÂÃÂ´ÃÂ¢ÃÂÃÂÃÂÃÂÃÂÃÂ§ÃÂÃÂ ÃÂÃÂ©ÃÂÃÂ§ÃÂÃÂ±ÃÂÃÂ¨ÃÂÃÂ±ÃÂÃÂ§ÃÂÃÂ
+user.logout.success =ÃÂ´ÃÂÃÂ§ ÃÂ¨ÃÂ§ ÃÂÃÂÃÂÃÂÃÂÃÂª ÃÂ§ÃÂ² ÃÂ­ÃÂ³ÃÂ§ÃÂ¨ ÃÂ©ÃÂ§ÃÂ±ÃÂ¨ÃÂ±ÃÂ ÃÂ®ÃÂ§ÃÂ±ÃÂ¬ ÃÂ´ÃÂ¯ÃÂÃÂ¯
+course.duplicate=ÃÂ±ÃÂ´ÃÂªÃÂ '{0}' ÃÂÃÂ¨ÃÂÃÂ§ÃÂ ÃÂ«ÃÂ¨ÃÂª ÃÂ´ÃÂ¯ÃÂ ÃÂ§ÃÂ³ÃÂª!
+course.creation.success= ÃÂ¯ÃÂÃÂ±ÃÂ ÃÂ¨ÃÂ§ ÃÂÃÂÃÂÃÂÃÂÃÂª ÃÂ§ÃÂÃÂ¬ÃÂ§ÃÂ¯ ÃÂ´ÃÂ¯!
+courses.get.success= ÃÂ¯ÃÂÃÂ±ÃÂÃ¢ÂÂÃÂÃÂ§ ÃÂ¨ÃÂ§ ÃÂÃÂÃÂÃÂÃÂÃÂª ÃÂ¯ÃÂ±ÃÂÃÂ§ÃÂÃÂª ÃÂ´ÃÂ¯ÃÂÃÂ¯!
+course.update.success= ÃÂ¯ÃÂÃÂ±ÃÂ ÃÂ¨ÃÂ§ ÃÂÃÂÃÂÃÂÃÂÃÂª ÃÂ¨ÃÂÃ¢ÂÂÃÂ±ÃÂÃÂ² ÃÂ´ÃÂ¯!
 
-# Ù¾ÛØ§ÙâÙØ§Û ÙÙÙÙÛØª - Ø±Ø´ØªÙ ØªØ­ØµÛÙÛ
-major.creation.success=Ø±Ø´ØªÙ ØªØ­ØµÛÙÛ Ø¨Ø§ ÙÙÙÙÛØª Ø§ÛØ¬Ø§Ø¯ Ø´Ø¯
-major.update.success=Ø±Ø´ØªÙ ØªØ­ØµÛÙÛ Ø¨Ø§ ÙÙÙÙÛØª Ø¨ÙâØ±ÙØ²Ø±Ø³Ø§ÙÛ Ø´Ø¯
-major.get.success=Ø±Ø´ØªÙ ØªØ­ØµÛÙÛ Ø¨Ø§ ÙÙÙÙÛØª Ø¯Ø±ÛØ§ÙØª Ø´Ø¯
-major.list.success=ÙÛØ³Øª Ø±Ø´ØªÙâÙØ§Û ØªØ­ØµÛÙÛ Ø¨Ø§ ÙÙÙÙÛØª Ø¯Ø±ÛØ§ÙØª Ø´Ø¯
-major.courses.get.success=Ø¯ÙØ±ÙâÙØ§ Ø¨Ø§ ÙÙÙÙÛØª Ø¯Ø±ÛØ§ÙØª Ø´Ø¯ÙØ¯
-major.delete.success=Ø±Ø´ØªÙ ØªØ­ØµÛÙÛ Ø¨Ø§ ÙÙÙÙÛØª Ø­Ø°Ù Ø´Ø¯
+# ÃÂ¾ÃÂÃÂ§ÃÂÃ¢ÂÂÃÂÃÂ§ÃÂ ÃÂÃÂÃÂÃÂÃÂÃÂª - ÃÂ±ÃÂ´ÃÂªÃÂ ÃÂªÃÂ­ÃÂµÃÂÃÂÃÂ
+major.creation.success=ÃÂ±ÃÂ´ÃÂªÃÂ ÃÂªÃÂ­ÃÂµÃÂÃÂÃÂ ÃÂ¨ÃÂ§ ÃÂÃÂÃÂÃÂÃÂÃÂª ÃÂ§ÃÂÃÂ¬ÃÂ§ÃÂ¯ ÃÂ´ÃÂ¯
+major.update.success=ÃÂ±ÃÂ´ÃÂªÃÂ ÃÂªÃÂ­ÃÂµÃÂÃÂÃÂ ÃÂ¨ÃÂ§ ÃÂÃÂÃÂÃÂÃÂÃÂª ÃÂ¨ÃÂÃ¢ÂÂÃÂ±ÃÂÃÂ²ÃÂ±ÃÂ³ÃÂ§ÃÂÃÂ ÃÂ´ÃÂ¯
+major.get.success=ÃÂ±ÃÂ´ÃÂªÃÂ ÃÂªÃÂ­ÃÂµÃÂÃÂÃÂ ÃÂ¨ÃÂ§ ÃÂÃÂÃÂÃÂÃÂÃÂª ÃÂ¯ÃÂ±ÃÂÃÂ§ÃÂÃÂª ÃÂ´ÃÂ¯
+major.list.success=ÃÂÃÂÃÂ³ÃÂª ÃÂ±ÃÂ´ÃÂªÃÂÃ¢ÂÂÃÂÃÂ§ÃÂ ÃÂªÃÂ­ÃÂµÃÂÃÂÃÂ ÃÂ¨ÃÂ§ ÃÂÃÂÃÂÃÂÃÂÃÂª ÃÂ¯ÃÂ±ÃÂÃÂ§ÃÂÃÂª ÃÂ´ÃÂ¯
+major.courses.get.success=ÃÂ¯ÃÂÃÂ±ÃÂÃ¢ÂÂÃÂÃÂ§ ÃÂ¨ÃÂ§ ÃÂÃÂÃÂÃÂÃÂÃÂª ÃÂ¯ÃÂ±ÃÂÃÂ§ÃÂÃÂª ÃÂ´ÃÂ¯ÃÂÃÂ¯
+major.delete.success=ÃÂ±ÃÂ´ÃÂªÃÂ ÃÂªÃÂ­ÃÂµÃÂÃÂÃÂ ÃÂ¨ÃÂ§ ÃÂÃÂÃÂÃÂÃÂÃÂª ÃÂ­ÃÂ°ÃÂ ÃÂ´ÃÂ¯
 
-# Ù¾ÛØ§ÙâÙØ§Û Ø®Ø·Ø§ - Ø±Ø´ØªÙ ØªØ­ØµÛÙÛ
-error.major.not.found=Ø±Ø´ØªÙ ØªØ­ØµÛÙÛ Ø¨Ø§ Ø´ÙØ§Ø³Ù {0} ÛØ§ÙØª ÙØ´Ø¯
-error.major.duplicate.name=Ø±Ø´ØªÙ ØªØ­ØµÛÙÛ Ø¨Ø§ ÙØ§Ù ''{0}'' Ø§Ø² ÙØ¨Ù ÙØ¬ÙØ¯ Ø¯Ø§Ø±Ø¯
-error.major.already.inactive=Ø±Ø´ØªÙ ØªØ­ØµÛÙÛ ''{0}'' ÙØ¨ÙØ§Ù ØºÛØ± ÙØ¹Ø§Ù Ø´Ø¯Ù Ø§Ø³Øª
-error.major.name.empty=ÙØ§Ù Ø±Ø´ØªÙ ØªØ­ØµÛÙÛ ÙÙÛâØªÙØ§ÙØ¯ Ø®Ø§ÙÛ Ø¨Ø§Ø´Ø¯
+# ÃÂ¾ÃÂÃÂ§ÃÂÃ¢ÂÂÃÂÃÂ§ÃÂ ÃÂ®ÃÂ·ÃÂ§ - ÃÂ±ÃÂ´ÃÂªÃÂ ÃÂªÃÂ­ÃÂµÃÂÃÂÃÂ
+error.major.not.found=ÃÂ±ÃÂ´ÃÂªÃÂ ÃÂªÃÂ­ÃÂµÃÂÃÂÃÂ ÃÂ¨ÃÂ§ ÃÂ´ÃÂÃÂ§ÃÂ³ÃÂ {0} ÃÂÃÂ§ÃÂÃÂª ÃÂÃÂ´ÃÂ¯
+error.major.duplicate.name=ÃÂ±ÃÂ´ÃÂªÃÂ ÃÂªÃÂ­ÃÂµÃÂÃÂÃÂ ÃÂ¨ÃÂ§ ÃÂÃÂ§ÃÂ ''{0}'' ÃÂ§ÃÂ² ÃÂÃÂ¨ÃÂ ÃÂÃÂ¬ÃÂÃÂ¯ ÃÂ¯ÃÂ§ÃÂ±ÃÂ¯
+error.major.already.inactive=ÃÂ±ÃÂ´ÃÂªÃÂ ÃÂªÃÂ­ÃÂµÃÂÃÂÃÂ ''{0}'' ÃÂÃÂ¨ÃÂÃÂ§ÃÂ ÃÂºÃÂÃÂ± ÃÂÃÂ¹ÃÂ§ÃÂ ÃÂ´ÃÂ¯ÃÂ ÃÂ§ÃÂ³ÃÂª
+error.major.name.empty=ÃÂÃÂ§ÃÂ ÃÂ±ÃÂ´ÃÂªÃÂ ÃÂªÃÂ­ÃÂµÃÂÃÂÃÂ ÃÂÃÂÃÂÃ¢ÂÂÃÂªÃÂÃÂ§ÃÂÃÂ¯ ÃÂ®ÃÂ§ÃÂÃÂ ÃÂ¨ÃÂ§ÃÂ´ÃÂ¯
 
-# Ù¾ÛØ§ÙâÙØ§Û Ø¹ÙÙÙÛ
-ENTITY_NOT_FOUND=ÙÙØ¬ÙØ¯ÛØª Ø¨Ø§ Ø´ÙØ§Ø³Ù {0} ÛØ§ÙØª ÙØ´Ø¯
-entity.major.notfound=رشته‌ای با این نام پیدا نشد.
-entity.term.notfound=ترمی با این ایدی پیدا نشد
-access.denied.for.delete.term=دسترسی غیرمجاز است. شما نمی‌توانید یک ترم فعال را تغییر دهید.
-term.created=ترم با موفقیت ایجاد شد.
-term.updated=ترم با موفقیت ویرایش شد.
-term.deleted=ترم با موفقیت حذف شد.
-term.listed=همه ترم‌ها با موفقیت دریافت شدند.
+# ÃÂ¾ÃÂÃÂ§ÃÂÃ¢ÂÂÃÂÃÂ§ÃÂ ÃÂ¹ÃÂÃÂÃÂÃÂ
+ENTITY_NOT_FOUND=ÃÂÃÂÃÂ¬ÃÂÃÂ¯ÃÂÃÂª ÃÂ¨ÃÂ§ ÃÂ´ÃÂÃÂ§ÃÂ³ÃÂ {0} ÃÂÃÂ§ÃÂÃÂª ÃÂÃÂ´ÃÂ¯
+entity.major.notfound=Ø±Ø´ØªÙâØ§Û Ø¨Ø§ Ø§ÛÙ ÙØ§Ù Ù¾ÛØ¯Ø§ ÙØ´Ø¯.
+entity.term.notfound=ØªØ±ÙÛ Ø¨Ø§ Ø§ÛÙ Ø§ÛØ¯Û Ù¾ÛØ¯Ø§ ÙØ´Ø¯
+access.denied.for.delete.term=Ø¯Ø³ØªØ±Ø³Û ØºÛØ±ÙØ¬Ø§Ø² Ø§Ø³Øª. Ø´ÙØ§ ÙÙÛâØªÙØ§ÙÛØ¯ ÛÚ© ØªØ±Ù ÙØ¹Ø§Ù Ø±Ø§ ØªØºÛÛØ± Ø¯ÙÛØ¯.
+term.created=ØªØ±Ù Ø¨Ø§ ÙÙÙÙÛØª Ø§ÛØ¬Ø§Ø¯ Ø´Ø¯.
+term.updated=ØªØ±Ù Ø¨Ø§ ÙÙÙÙÛØª ÙÛØ±Ø§ÛØ´ Ø´Ø¯.
+term.deleted=ØªØ±Ù Ø¨Ø§ ÙÙÙÙÛØª Ø­Ø°Ù Ø´Ø¯.
+term.listed=ÙÙÙ ØªØ±ÙâÙØ§ Ø¨Ø§ ÙÙÙÙÛØª Ø¯Ø±ÛØ§ÙØª Ø´Ø¯ÙØ¯.
 term.exists=Term with this type already exists for the selected major.
+person.not.founded=نام کاربری {0} یافت نشد
